TestSuite/errors/err0500.pas
//!Нельзя преобразовать тип integer к string
uses GraphWPF,Controls;

begin
  var sb := StatusBar;
  sb.Text := Milliseconds;
end.